--- a/index.html
+++ b/index.html
@@ -119,6 +119,11 @@
 							<!-- Tutorial -->
 							<strong><span style="font-size: large;"><a name="tutorial"></a>Tutorial</span></strong>
 							<hr>
+							
+							<p>
+							<a href="tuto_icassp2021/DVAE_tutorial.html">Slides</a>
+							</p>
+							
 
 							<!-- Ressources -->
 							<strong><span style="font-size: large;"><a name="ressources"></a>Ressources</span></strong>
