--- a/index.html
+++ b/index.html
@@ -158,10 +158,10 @@ border-collapse: collapse;
 		<hr>
 
 		<p>
-		We provide in this <a href="https://github.com/XiaoyuBIE1994/DVAE-speech">Github repository</a> a PyTorch implementation of the following DVAE models, along with the training/testing recipes for analysis-resynthesis of speech signals, using the <a href="https://catalog.ldc.upenn.edu/LDC93S6B">Wall Street Journal</a> dataset.
+		We provide in this <a href="https://github.com/XiaoyuBIE1994/DVAE-speech">Github repository</a> a PyTorch implementation of the following DVAE models, along with training/testing recipes for analysis-resynthesis of speech signals, using the <a href="https://catalog.ldc.upenn.edu/LDC93S6B">Wall Street Journal</a> dataset.
 		</p>
 		<p>
-		You can play with the trained models on speech signals using this <a href="https://colab.research.google.com/drive/1LU1IALbZyfRB8oFb7J3DVATSxvDtg8v4?usp=sharing">Google Colab notebook</a>.
+		You can play with the trained models in this <a href="https://colab.research.google.com/drive/1LU1IALbZyfRB8oFb7J3DVATSxvDtg8v4?usp=sharing">Google Colab notebook</a>.
 		</p>
 
 		<style type="text/css">
