--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ border-collapse: collapse;
 		<p style="text-align: center;">Simon Leglaive<sup>1</sup>&emsp;&emsp; Xavier Alameda-Pineda<sup>2</sup>&emsp;&emsp; Laurent Girin<sup>2,3</sup>&emsp;&emsp;</p>
 		<p style="text-align: center;"><sup>1</sup>CentraleSupélec, IETR, France &emsp;&emsp; <sup>2</sup>Inria, Univ. Grenoble Alpes, CNRS, LJK, France &emsp;&emsp; <sup>3</sup>Univ. Grenoble Alpes, CNRS, Grenoble-INP, GIPSA-lab, France
 		</p>
-		<p style="text-align: center;">Tutorial at 2021 IEEE International Conference on Acoustics Speech and Signal Processing (ICASSP)</p>
+		<p style="text-align: center;">Tutorial at the 2021 IEEE International Conference on Acoustics Speech and Signal Processing (ICASSP)</p>
 		<p style="text-align: center;">
 			<a href="#paper">Paper</a> |
 			<a href="#slides">Slides</a> |
@@ -142,7 +142,7 @@ border-collapse: collapse;
 		
 
 		<p>
-		You can access to the slides of this tutorial <a href="tuto_icassp2021/DVAE_tutorial.html">here</a>.
+		You can access the slides of the tutorial <a href="tuto_icassp2021/DVAE_tutorial.html">here</a>.
 		</p>
 
 		<iframe
@@ -158,10 +158,10 @@ border-collapse: collapse;
 		<hr>
 
 		<p>
-		We provide in this <a href="https://github.com/XiaoyuBIE1994/DVAE-speech">Github repository</a> a PyTorch implementation of the following DVAE models, along with training/testing recipes for analysis-resynthesis of speech signals, using the <a href="https://catalog.ldc.upenn.edu/LDC93S6B">Wall Street Journal</a> dataset.
+		We provide in this <a href="https://github.com/XiaoyuBIE1994/DVAE-speech">Github repository</a> a PyTorch implementation of 7 DVAE models listed below, along with training/testing recipes for analysis-resynthesis of speech signals using the <a href="https://catalog.ldc.upenn.edu/LDC93S6B">Wall Street Journal</a> dataset.
 		</p>
 		<p>
-		You can play with the trained models in this <a href="https://colab.research.google.com/drive/1LU1IALbZyfRB8oFb7J3DVATSxvDtg8v4?usp=sharing">Google Colab notebook</a>.
+		You can test already trained DVAE models on analsysis-resynthesis of speech signals using this <a href="https://colab.research.google.com/drive/1LU1IALbZyfRB8oFb7J3DVATSxvDtg8v4?usp=sharing">Google Colab notebook</a>.
 		</p>
 
 		<style type="text/css">
