--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@ border-collapse: collapse;
 		We provide in this <a href="https://github.com/XiaoyuBIE1994/DVAE-speech">Github repository</a> a PyTorch implementation of 7 DVAE models listed below, along with training/testing recipes for analysis-resynthesis of speech signals using the <a href="https://catalog.ldc.upenn.edu/LDC93S6B">Wall Street Journal</a> dataset.
 		</p>
 		<p>
-		You can test already trained DVAE models on analsysis-resynthesis of speech signals using this <a href="https://colab.research.google.com/drive/1LU1IALbZyfRB8oFb7J3DVATSxvDtg8v4?usp=sharing">Google Colab notebook</a>.
+		You can test already trained DVAE models on analysis-resynthesis of speech signals using this <a href="https://colab.research.google.com/drive/1LU1IALbZyfRB8oFb7J3DVATSxvDtg8v4?usp=sharing">Google Colab notebook</a>.
 		</p>
 
 		<style type="text/css">
