last version slidesé

--- a/tuto_icassp2021/DVAE_tutorial.html
+++ b/tuto_icassp2021/DVAE_tutorial.html
@@ -179,7 +179,7 @@ A great number of successful practical applications of machine and deep learning
 
 .kol-2-3[
 <div style="text-align:center;margin-bottom:30px">
-  <iframe width="650" height="350" src="https://www.youtube.com/embed/qWl9idsCuLQ?start=10&mute=1&loop=1" frameborder="0" allow="autoplay; encrypted-media" style="max-width:100%" allowfullscreen=""></iframe>
+  <iframe width="650" height="350" src="https://www.youtube.com/embed/qWl9idsCuLQ?start=10&mute=1&loop=1&autoplay=1" frameborder="0" allow="autoplay; encrypted-media" style="max-width:100%" allowfullscreen=""></iframe>
 </div>
 
 .caption[ .small[Zhao et al., [ICNet for real-time semantic segmentation on high-resolution images](https://arxiv.org/pdf/1704.08545.pdf), ECCV 2018 ]]
@@ -3528,7 +3528,7 @@ where
 ---
 class: middle, center
 
-During the **.bold[training phase]**, we learn the parameters $\theta\_{{\color{green}\mathbf{s}}}$ on the WJS0 clean speech dataset.
+During the **.bold[training phase]**, we learn the parameters $\theta\_{{\color{green}\mathbf{s}}}$ on the WSJ0 clean speech dataset.
 
 .left.footnote[In the following we consider only the non-causal model for presenting the speech enhancement method.]
 
