--- a/index.html
+++ b/index.html
@@ -97,8 +97,9 @@ border-collapse: collapse;
 		</p>
 		<p style="text-align: center;">Tutorial at the 2021 IEEE International Conference on Acoustics Speech and Signal Processing (ICASSP)</p>
 		<p style="text-align: center;">
-			<a href="#paper">Paper</a> |
+			<a href="#abstract">Abstract</a> |
 			<a href="#slides">Slides</a> |
+			<a href="#paper">Paper</a> |
 			<a href="#code">Code</a>
 			<!--- <a href="#acknowledgement">Acknowledgement</a> -->
 		</p>
@@ -115,6 +116,24 @@ border-collapse: collapse;
 		<td style="width: 20%; text-align: left;"><img class="wp-image-7444 aligncenter" src="data/VRNN-gen.svg" alt="" width="250" /></a></td> 
 		</tr>
 		</table>
+
+		<!-- Slides -->
+		<strong><span style="font-size: large;"><a name="slides"></a>Slides</span></strong>
+		<hr>
+		
+		
+
+		<p>
+		You can access the slides of the tutorial <a href="tuto_icassp2021/DVAE_tutorial.html">here</a>.
+		</p>
+
+		<iframe
+		width="800"
+		height="450"
+		src="tuto_icassp2021/DVAE_tutorial.html">
+		</iframe>
+
+		<br>
 
 		<!-- Paper -->
 		<strong><span style="font-size: large;"><a name="paper"></a>Paper</span></strong>
@@ -134,7 +153,7 @@ border-collapse: collapse;
 		</p>
 			
 		<p>
-			In this paper we perform an extensive literature review of extensions of the VAE that have been proposed to process sequential data. 
+			In this paper we perform an extensive literature review of extensions of the VAE to process sequential data. 
 			We also introduce and discuss a general class of models called Dynamical VAEs (DVAEs) that encompasses a large subset of these temporal VAE extensions. 
 			Then we present in detail seven different instances of the DVAE (see the table below) that were recently proposed in the literature, with an effort to homogenize the notations and presentation lines, 
 			as well as to relate these models with existing classical temporal models.  We reimplemented those seven DVAE models and we present the results of an experimental benchmark conducted on a speech analysis-resynthesis task (the PyTorch code is made publicly available).
@@ -187,6 +206,7 @@ border-collapse: collapse;
 					<td class="tg-z3ar">S. Leglaive et al., <a href="https://hal.archives-ouvertes.fr/hal-02329000/document"><span style="text-decoration:none;color:blue">A recurrent variational autoencoder for speech enhancement</span></a>, IEEE ICASSP 2020</td>
 				  </tr>
 				</tbody>
+				<caption>The seven DVAE models that are discussed in the review paper (Girin et al., 2020).</caption>
 				</table>
 			
 			
@@ -194,24 +214,6 @@ border-collapse: collapse;
 			
 		
 		</p>
-		
-		<!-- Slides -->
-		<strong><span style="font-size: large;"><a name="slides"></a>Slides</span></strong>
-		<hr>
-		
-		
-
-		<p>
-		You can access the slides of the tutorial <a href="tuto_icassp2021/DVAE_tutorial.html">here</a>.
-		</p>
-
-		<iframe
-		width="800"
-		height="450"
-		src="tuto_icassp2021/DVAE_tutorial.html">
-		</iframe>
-
-		<br>
 
 		<!-- Code -->
 		<strong><span style="font-size: large;"><a name="code"></a>Code</span></strong>
