--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ border-collapse: collapse;
 		<p style="text-align: center;">Tutorial at the 2021 IEEE International Conference on Acoustics Speech and Signal Processing (ICASSP)</p>
 		<p style="text-align: center;">
 			<a href="#abstract">Abstract</a> |
-			<a href="#slides">Slides</a> |
+			<a href="#tutorial">Tutorial</a> |
 			<a href="#paper">Paper</a> |
 			<a href="#code">Code</a>
 			<!--- <a href="#acknowledgement">Acknowledgement</a> -->
@@ -118,7 +118,7 @@ border-collapse: collapse;
 		</table>
 
 		<!-- Slides -->
-		<strong><span style="font-size: large;"><a name="slides"></a>Slides</span></strong>
+		<strong><span style="font-size: large;"><a name="tutorial"></a>Tutorial</span></strong>
 		<hr>
 		
 		
@@ -127,12 +127,9 @@ border-collapse: collapse;
 		You can access the slides of the tutorial <a href="tuto_icassp2021/DVAE_tutorial.html">here</a>.
 		</p>
 
-		<iframe
-		width="800"
-		height="450"
-		src="tuto_icassp2021/DVAE_tutorial.html">
-		</iframe>
+		<iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLuZsCU0LDHDeEusitbdY6bNKOEhqh6DnS" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
+		<br>
 		<br>
 
 		<!-- Paper -->
