--- a/index.html
+++ b/index.html
@@ -137,14 +137,17 @@ border-collapse: collapse;
 		<hr>
 
 		<p>
-		This tutorial is built from the following review paper:
+		This tutorial was built from an early version of the following review paper, which is now published in Foundations and Trends in Machine Learning:
 		<br>
 		<br>
-		<a href="https://arxiv.org/pdf/2008.12595.pdf">Dynamical variational autoencoders: A comprehensive review</a>
+		<a href="https://www.nowpublishers.com/article/Details/MAL-089">Dynamical variational autoencoders: A comprehensive review</a>
 		<br>
 		Laurent Girin, Simon Leglaive, Xiaoyu Bie, Julien Diard, Thomas Hueber, Xavier Alameda-Pineda
 		<br>
-		<span class="italic">arXiv preprint arXiv:2008.12595</span>, 2020
+		<span class="italic">Foundations and Trends in Machine Learning</span>, vol. 15, no. 1-2, 2021
+		<br>
+		<br>
+		You will find this early version on <a href="https://arxiv.org/pdf/2008.12595.pdf">arXiv</a>. For the moment, the revised and final version of the paper is only available on the publisher's web page.
 		<br>
 		<br>
 		</p>
