--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@ border-collapse: collapse;
 		<span class="italic">Foundations and Trends in Machine Learning</span>, vol. 15, no. 1-2, 2021
 		<br>
 		<br>
-		You will find this early version on <a href="https://arxiv.org/pdf/2008.12595.pdf">arXiv</a>. For the moment, the revised and final version of the paper is only available on the publisher's web page.
+		The paper is now also available on <a href="https://arxiv.org/pdf/2008.12595.pdf">arXiv</a>.
 		<br>
 		<br>
 		</p>
